# Polynom

./: CMakeLists.txt  README.md  appveyor.yml
Polynom/: Polynom.sln
Polynom/Polynom/: Polynom.cpp  Polynom.vcxproj  Polynom.vcxproj.filters  pch.h
